--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/adamxp12/snapmusic.git"
   },
   "author": "Adam Blunt (adamblunt.me)",
-  "license": "MIT",
+  "license": "GNU GPLv3",
   "bugs": {
     "url": "https://github.com/adamxp12/snapmusic/issues"
   },
