--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "helmet": "^3.13.0",
+    "mongoose": "^5.2.7",
     "nunjucks": "^3.1.3"
   }
 }
